--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-06 21:45 -->
+<!-- 2022-12-06 21:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org675d736">1. 笔记</a></li>
-<li><a href="#orgede3401">2. 推送</a></li>
-<li><a href="#orge38c392">3. Git</a></li>
-<li><a href="#org416ccef">4. XBox</a></li>
-<li><a href="#org1d6b688">5. Bilibili</a></li>
+<li><a href="#org83b4886">1. 笔记</a></li>
+<li><a href="#org65149bb">2. 推送</a></li>
+<li><a href="#org9c77a04">3. Git</a></li>
+<li><a href="#org49daecc">4. XBox</a></li>
+<li><a href="#org16c9e3c">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org675d736" class="outline-2">
-<h2 id="org675d736"><span class="section-number-2">1.</span> <a href="#org675d736">笔记</a></h2>
+<div id="outline-container-org83b4886" class="outline-2">
+<h2 id="org83b4886"><span class="section-number-2">1.</span> <a href="#org83b4886">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgede3401" class="outline-2">
-<h2 id="orgede3401"><span class="section-number-2">2.</span> <a href="#orgede3401">推送</a></h2>
+<div id="outline-container-org65149bb" class="outline-2">
+<h2 id="org65149bb"><span class="section-number-2">2.</span> <a href="#org65149bb">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge38c392" class="outline-2">
-<h2 id="orge38c392"><span class="section-number-2">3.</span> <a href="#orge38c392">Git</a></h2>
+<div id="outline-container-org9c77a04" class="outline-2">
+<h2 id="org9c77a04"><span class="section-number-2">3.</span> <a href="#org9c77a04">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-org416ccef" class="outline-2">
-<h2 id="org416ccef"><span class="section-number-2">4.</span> <a href="#org416ccef">XBox</a></h2>
+<div id="outline-container-org49daecc" class="outline-2">
+<h2 id="org49daecc"><span class="section-number-2">4.</span> <a href="#org49daecc">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1d6b688" class="outline-2">
-<h2 id="org1d6b688"><span class="section-number-2">5.</span> <a href="#org1d6b688">Bilibili</a></h2>
+<div id="outline-container-org16c9e3c" class="outline-2">
+<h2 id="org16c9e3c"><span class="section-number-2">5.</span> <a href="#org16c9e3c">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,9 +117,9 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
-  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
+  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
 </div>
 </body>
