--- a/content/collections/word-of-the-year.html
+++ b/content/collections/word-of-the-year.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-06 21:45 -->
+<!-- 2022-12-06 21:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Word of the year</title>
@@ -46,9 +46,9 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9db0dcb">1. 2022</a>
+<li><a href="#orgff8598b">1. 2022</a>
 <ul>
-<li><a href="#org58c4817">1.1. Goblin mode 摆烂</a></li>
+<li><a href="#orgd6ca43b">1.1. Goblin mode 摆烂</a></li>
 </ul>
 </li>
 </ul>
@@ -56,12 +56,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org9db0dcb" class="outline-2">
-<h2 id="org9db0dcb"><span class="section-number-2">1.</span> <a href="#org9db0dcb">2022</a></h2>
+<div id="outline-container-orgff8598b" class="outline-2">
+<h2 id="orgff8598b"><span class="section-number-2">1.</span> <a href="#orgff8598b">2022</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org58c4817" class="outline-3">
-<h3 id="org58c4817"><span class="section-number-3">1.1.</span> <a href="#org58c4817">Goblin mode 摆烂</a></h3>
+<div id="outline-container-orgd6ca43b" class="outline-3">
+<h3 id="orgd6ca43b"><span class="section-number-3">1.1.</span> <a href="#orgd6ca43b">Goblin mode 摆烂</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <blockquote>
 <p>
@@ -91,9 +91,9 @@ would a goblin care about presentation?”
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-12-06 21:28</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-06 21:43</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
-  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/word-of-the-year.org">content/collections/word-of-the-year.org</a></td></tr>
+  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/word-of-the-year.org">content/collections/word-of-the-year.org</a></td></tr>
 </table>
 </div>
 </body>
