--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-06 21:45 -->
+<!-- 2022-12-06 21:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7d619f4">1. 暑假</a>
+<li><a href="#org86440a3">1. 暑假</a>
 <ul>
-<li><a href="#org8fd6698">1.1. 夏令营</a></li>
+<li><a href="#org65ad8cf">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgbd9e7ad">2. 打工</a></li>
-<li><a href="#orge7dfffa">3. 我的928</a>
+<li><a href="#org29224d7">2. 打工</a></li>
+<li><a href="#orga7b917f">3. 我的928</a>
 <ul>
-<li><a href="#org4c086ff">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgb5d699b">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org2bdf1d3">4. 他们的928</a></li>
-<li><a href="#orgb03e836">5. 总结</a></li>
+<li><a href="#orgc9987cc">4. 他们的928</a></li>
+<li><a href="#orgddb835c">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org9ad2e85">
+<figure id="org96bec02">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org7d619f4" class="outline-2">
-<h2 id="org7d619f4"><span class="section-number-2">1.</span> <a href="#org7d619f4">暑假</a></h2>
+<div id="outline-container-org86440a3" class="outline-2">
+<h2 id="org86440a3"><span class="section-number-2">1.</span> <a href="#org86440a3">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org8fd6698" class="outline-3">
-<h3 id="org8fd6698"><span class="section-number-3">1.1.</span> <a href="#org8fd6698">夏令营</a></h3>
+<div id="outline-container-org65ad8cf" class="outline-3">
+<h3 id="org65ad8cf"><span class="section-number-3">1.1.</span> <a href="#org65ad8cf">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgbd9e7ad" class="outline-2">
-<h2 id="orgbd9e7ad"><span class="section-number-2">2.</span> <a href="#orgbd9e7ad">打工</a></h2>
+<div id="outline-container-org29224d7" class="outline-2">
+<h2 id="org29224d7"><span class="section-number-2">2.</span> <a href="#org29224d7">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge7dfffa" class="outline-2">
-<h2 id="orge7dfffa"><span class="section-number-2">3.</span> <a href="#orge7dfffa">我的928</a></h2>
+<div id="outline-container-orga7b917f" class="outline-2">
+<h2 id="orga7b917f"><span class="section-number-2">3.</span> <a href="#orga7b917f">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org4c086ff" class="outline-3">
-<h3 id="org4c086ff"><span class="section-number-3">3.1.</span> <a href="#org4c086ff">928演唱会(bushi</a></h3>
+<div id="outline-container-orgb5d699b" class="outline-3">
+<h3 id="orgb5d699b"><span class="section-number-3">3.1.</span> <a href="#orgb5d699b">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgc57aed6">
+<figure id="orga5615a1">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgb404cef">
+<figure id="org6e5db4f">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org2bdf1d3" class="outline-2">
-<h2 id="org2bdf1d3"><span class="section-number-2">4.</span> <a href="#org2bdf1d3">他们的928</a></h2>
+<div id="outline-container-orgc9987cc" class="outline-2">
+<h2 id="orgc9987cc"><span class="section-number-2">4.</span> <a href="#orgc9987cc">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb03e836" class="outline-2">
-<h2 id="orgb03e836"><span class="section-number-2">5.</span> <a href="#orgb03e836">总结</a></h2>
+<div id="outline-container-orgddb835c" class="outline-2">
+<h2 id="orgddb835c"><span class="section-number-2">5.</span> <a href="#orgddb835c">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,9 +262,9 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
-  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
+  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
 </div>
 </body>
