--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-06 21:45 -->
+<!-- 2022-12-06 21:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge552a37">1. What is Vectored IO</a></li>
-<li><a href="#org05aa652">2. Vectored IO in Linux</a></li>
-<li><a href="#org6b5bcfb">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org91ca74b">4. Examples</a>
+<li><a href="#orgd100715">1. What is Vectored IO</a></li>
+<li><a href="#org0992f76">2. Vectored IO in Linux</a></li>
+<li><a href="#org1451b59">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org55bb123">4. Examples</a>
 <ul>
-<li><a href="#orga6c8aaa">4.1. <code>write()</code></a></li>
-<li><a href="#orgafd80f3">4.2. <code>writev()</code></a></li>
+<li><a href="#orgd1b0f41">4.1. <code>write()</code></a></li>
+<li><a href="#org8d9da4f">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-orge552a37" class="outline-2">
-<h2 id="orge552a37"><span class="section-number-2">1.</span> <a href="#orge552a37">What is Vectored IO</a></h2>
+<div id="outline-container-orgd100715" class="outline-2">
+<h2 id="orgd100715"><span class="section-number-2">1.</span> <a href="#orgd100715">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org05aa652" class="outline-2">
-<h2 id="org05aa652"><span class="section-number-2">2.</span> <a href="#org05aa652">Vectored IO in Linux</a></h2>
+<div id="outline-container-org0992f76" class="outline-2">
+<h2 id="org0992f76"><span class="section-number-2">2.</span> <a href="#org0992f76">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org6b5bcfb" class="outline-2">
-<h2 id="org6b5bcfb"><span class="section-number-2">3.</span> <a href="#org6b5bcfb">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org1451b59" class="outline-2">
+<h2 id="org1451b59"><span class="section-number-2">3.</span> <a href="#org1451b59">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org91ca74b" class="outline-2">
-<h2 id="org91ca74b"><span class="section-number-2">4.</span> <a href="#org91ca74b">Examples</a></h2>
+<div id="outline-container-org55bb123" class="outline-2">
+<h2 id="org55bb123"><span class="section-number-2">4.</span> <a href="#org55bb123">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orga6c8aaa" class="outline-3">
-<h3 id="orga6c8aaa"><span class="section-number-3">4.1.</span> <a href="#orga6c8aaa"><code>write()</code></a></h3>
+<div id="outline-container-orgd1b0f41" class="outline-3">
+<h3 id="orgd1b0f41"><span class="section-number-3">4.1.</span> <a href="#orgd1b0f41"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgafd80f3" class="outline-3">
-<h3 id="orgafd80f3"><span class="section-number-3">4.2.</span> <a href="#orgafd80f3"><code>writev()</code></a></h3>
+<div id="outline-container-org8d9da4f" class="outline-3">
+<h3 id="org8d9da4f"><span class="section-number-3">4.2.</span> <a href="#org8d9da4f"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,9 +207,9 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
-  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
+  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
 </div>
 </body>
