--- a/content/qq-group-export.html
+++ b/content/qq-group-export.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-06 21:45 -->
+<!-- 2022-12-06 21:54 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>导出QQ群成员</title>
@@ -46,15 +46,15 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org89b2e3f">1. 导出成员</a></li>
-<li><a href="#org112e2f6">2. 交叉对比</a></li>
+<li><a href="#org04bca35">1. 导出成员</a></li>
+<li><a href="#orgb972fcc">2. 交叉对比</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org89b2e3f" class="outline-2">
-<h2 id="org89b2e3f"><span class="section-number-2">1.</span> <a href="#org89b2e3f">导出成员</a></h2>
+<div id="outline-container-org04bca35" class="outline-2">
+<h2 id="org04bca35"><span class="section-number-2">1.</span> <a href="#org04bca35">导出成员</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 来自: <a href="https://www.zhihu.com/question/58753010/answer/1354673772">如何批量导出QQ群成员的QQ号/QQ邮箱等相关信息？ - 大发撸卡的回答 - 知乎</a>
@@ -82,8 +82,8 @@ console.log(t);
 </div>
 </div>
 
-<div id="outline-container-org112e2f6" class="outline-2">
-<h2 id="org112e2f6"><span class="section-number-2">2.</span> <a href="#org112e2f6">交叉对比</a></h2>
+<div id="outline-container-orgb972fcc" class="outline-2">
+<h2 id="orgb972fcc"><span class="section-number-2">2.</span> <a href="#orgb972fcc">交叉对比</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 交叉对比两个群的QQ号:
@@ -104,9 +104,9 @@ console.log(t);
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-29 16:05</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 16:09</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 21:54</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
-  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/qq-group-export.org">content/qq-group-export.org</a></td></tr>
+  <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/qq-group-export.org">content/qq-group-export.org</a></td></tr>
 </table>
 </div>
 </body>
